# Copyright 2023-2025, shadow3 (@shadow3aaa)
#
# This file is part of fas-rs.
#
# fas-rs is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# fas-rs is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along
# with fas-rs. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "fas-rs"
version = "4.2.0"
edition = "2021"
description = "Frame aware scheduling for android. Requires kernel ebpf support."
authors = ["shadow3"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/shadow3aaa/fas-rs"

[dependencies]
likely_stable = "0.1.3"
parking_lot = "0.12.3"
log = "0.4.22"
thiserror = "2.0.9"
anyhow = { version = "1.0.95" }
inotify = { version = "0.11.0", default-features = false }
flexi_logger = "0.29.8"
libc = "0.2.169"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
sys-mount = { version = "3.0.1", default-features = false }
quick-xml = { version = "0.37.2", features = ["serialize"] }
mlua = { version = "0.10.2", features = ["luajit", "vendored", "error-send"] }
frame-analyzer = "0.3.3"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
mimalloc = "0.1.43"
sysinfo = "0.33.1"

[build-dependencies]
anyhow = "1.0.95"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
overflow-checks = false
opt-level = 3
strip = true

[profile.release]
debug = true
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
