# Copyright 2023-2025, YuSaki丶Kanade, dependabot[bot], shadow3, shadow3aaa
#
# This file is part of fas-rs.
#
# fas-rs is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# fas-rs is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along
# with fas-rs. If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = ["xtask"]

[package]
name = "fas-rs"
version = "4.7.0"
edition = "2024"
description = "Frame aware scheduling for android. Requires kernel ebpf support."
authors = ["shadow3"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/shadow3aaa/fas-rs"

[dependencies]
likely_stable = "0.1.3"
parking_lot = "0.12.3"
thiserror = "2.0.12"
log = "0.4.26"
anyhow = { version = "1.0.97" }
inotify = { version = "0.11.0", default-features = false }
flexi_logger = "0.29.8"
libc = "0.2.171"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
sys-mount = { version = "3.0.1", default-features = false }
quick-xml = { version = "0.37.2", features = ["serialize"] }
mlua = { version = "0.10.3", features = ["luajit", "vendored", "error-send"] }
frame-analyzer = "0.3.3"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
mimalloc = "0.1.44"
num_cpus = "1.16.0"
nix = { version = "0.29.0", features = ["sched"] }

[build-dependencies]
anyhow = "1.0.97"
toml = "0.8.20"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[profile.dev]
overflow-checks = false
opt-level = 3
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
