# Copyright 2023-2025, YuSaki丶Kanade, dependabot[bot], shadow3, shadow3aaa
#
# This file is part of fas-rs.
#
# fas-rs is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# fas-rs is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along
# with fas-rs. If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = ["xtask"]

[package]
name = "fas-rs"
version = "4.9.1"
edition = "2024"
description = "Frame aware scheduling for android. Requires kernel ebpf support."
authors = ["shadow3"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/shadow3aaa/fas-rs"

[dependencies]
likely_stable = "0.1.3"
parking_lot = "0.12.5"
thiserror = "2.0.17"
log = "0.4.29"
anyhow = { version = "1.0.100" }
inotify = { version = "0.11.0", default-features = false }
flexi_logger = "0.31.7"
libc = "0.2.178"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
sys-mount = { version = "3.0.1", default-features = false }
quick-xml = { version = "0.38.4", features = ["serialize"] }
mlua = { version = "0.11.4", features = ["luajit", "vendored", "error-send"] }
frame-analyzer = "0.3.4"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
mimalloc = "0.1.48"
num_cpus = "1.17.0"
nix = { version = "0.30.1", features = ["sched"] }

[build-dependencies]
anyhow = "1.0.100"
toml = "0.9.8"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }

[profile.dev]
overflow-checks = false
opt-level = 3
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
