[package]
name = "fas-rs-fw"
version = "0.3.1"
edition = "2021"
description = "Frame-aware scheduling framework"
license = "Apache-2.0"
repository = "https://github.com/shadow3aaa/fas-rs"

[dependencies]
likely_stable = "0.1.2"
log = "0.4.19"
parking_lot = "0.12.1"
serde = "1.0.178"
serde_derive = "1.0.178"
thiserror = "1.0.48"
toml = "0.7.6"
unix-named-pipe = "0.2.0"
async-trait = "0.1.73"
binder = { package = "binder_ndk", version = "0.2.0" }
lazy_static = "1.4.0"
once_cell = "1.18.0"
sliding_features = "2.5.3"

[dependencies.inotify]
version = "0.10.2"
default_features = false
