[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger = "0.13.3"
cpp_demangle = "0.4.3"
dobby-api = "0.2.0"
goblin = "0.8.0"
libc = "0.2.151"
log = "0.4.20"
anyhow = "1.0.79"
async-trait = "0.1.77"
binder = { package = "binder_ndk", version = "0.2.0" }
lazy_static = "1.4.0"
once_cell = "1.19.0"
thiserror = "1.0.56"
toml = "0.8.8"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
codegen-units = 1
lto = 'fat'
opt-level = 's'
strip = true
panic = 'abort'
