[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger = "0.13.3"
cpp_demangle = "0.4.3"
dobby-api = "1.0.1"
goblin = "0.8.0"
libc = "0.2.153"
log = "0.4.21"
anyhow = "1.0.80"
async-trait = "0.1.77"
binder = { package = "binder_ndk", git = "https://github.com/shadow3aaa/binder_rs" }
lazy_static = "1.4.0"
once_cell = "1.19.0"
thiserror = "1.0.57"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
codegen-units = 1
lto = 'fat'
opt-level = 3
strip = true
panic = 'abort'
