# Copyright 2023 shadow3aaa@gitbub.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger = "0.14.1"
cpp_demangle = "0.4.3"
dobby-api = "1.0.1"
goblin = "0.8.2"
libc = "0.2.155"
log = "0.4.22"
anyhow = "1.0.86"
async-trait = "0.1.80"
binder = { package = "binder_ndk", git = "https://github.com/shadow3aaa/binder_rs" }
lazy_static = "1.5.0"
once_cell = "1.19.0"
thiserror = "1.0.63"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
codegen-units = 1
lto = 'fat'
opt-level = 3
strip = true
panic = 'abort'
